complete making chat and updating the list of chats (needs some extra details)